crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__multiline_conditional_type_ts.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { computed } from 'vue'

type KeyOfUnion<T> = T extends T ? keyof T : never;
type DistributiveOmit<T, K extends KeyOfUnion<T>> = T extends T
	? Omit<T, K>
	: never;


export default /*@__PURE__*/_defineComponent({
  __name: 'TestComponent',
  setup(__props) {

const x = computed(() => 1)

return (_ctx: any,_cache: any) => {
  return null
}
}

})
