crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__multiline_define_props_with_trailing_semicolon.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
assertion_line: 252
expression: output.as_str()
---
import { ref } from "vue";
export default {
  __name: "TestComponent",
  props: {
    label: {
      type: String,
      required: true
    },
    disabled: {
      type: Boolean,
      required: false
    }
  },
  setup(__props) {
    const x = ref(1);
    return (_ctx, _cache) => {
      return null;
    };
  }
};
