crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__multiline_standalone_await_preserves_object_literal.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { withAsyncContext as _withAsyncContext, defineComponent as _defineComponent } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'TestComponent',
  async setup(__props) {

let __temp: any, __restore: any

const client = useClient()
;(
  ([__temp,__restore] = _withAsyncContext(() => client.reports.create({
  accountId: 'acc',
  message: 'hello',
}))),
  await __temp,
  __restore()
)

return (_ctx: any,_cache: any) => {
  return null
}
}

})
