crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__no_template_returns_imported_bindings.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { onMounted } from "vue";
export default {
  __name: "TestComponent",
  setup(__props) {
    onMounted(() => {
      console.log("mounted");
    });
    return { onMounted };
  }
};
