crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__non_props_destructure_value_on_next_line.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { ref, toRefs } from "vue";
export default {
  __name: "TestComponent",
  setup(__props) {
    const state = ref({
      x: 1,
      y: 2
    });
    const { x, y } = toRefs(state.value);
    const sum = ref(x.value + y.value);
    return (_ctx, _cache) => {
      return null;
    };
  }
};
