crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__with_defaults_trailing_semicolon.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
assertion_line: 272
expression: output.as_str()
---
import { ref } from "vue";
export default {
  __name: "TestComponent",
  props: {
    msg: {
      type: String,
      required: true
    },
    count: {
      type: Number,
      required: false,
      default: 0
    }
  },
  setup(__props) {
    const x = ref(1);
    return (_ctx, _cache) => {
      return null;
    };
  }
};
